# zpixie

./: .bazelrc
.github/actions/bazelrc/: action.yaml
.github/actions/gcloud_creds/: action.yaml
.github/workflows/: get_image.yaml  vizier_release.yaml
bazel/: repositories.bzl  repository_locations.bzl
ci/: image_utils.sh  vizier_build_release.sh
k8s/vizier/: BUILD.bazel
k8s/vizier/pem/base/: pem_daemonset.yaml
scripts/: create_cloud_secrets.sh
skaffold/: skaffold_vizier.yaml
src/common/event/: nats.h
src/pxl_scripts/px/http_data/: data.pxl
src/shared/services/msgbus/: nats.go
src/stirling/: stirling.cc
src/stirling/core/: data_table.h
src/stirling/source_connectors/socket_tracer/: BUILD.bazel  http_table.h  mysql_table.h  pgsql_table.h  socket_trace_connector.cc  socket_trace_connector.h  socket_trace_connector_zk.h
src/stirling/source_connectors/socket_tracer/protocols/http/: parse.cc
src/stirling/source_connectors/socket_tracer/protocols/mysql/: handler.cc
src/ui/src/containers/live-widgets/utils/: script-reference.tsx
src/utils/pixie_updater/: main.go
src/utils/shared/certs/: certs.go
src/vizier/services/agent/kelvin/: kelvin_main.cc
src/vizier/services/agent/pem/: pem_main.cc
src/vizier/services/agent/shared/manager/: manager.cc
src/vizier/services/cloud_connector/: cloud_connector_server.go
src/vizier/services/cloud_connector/bridge/: server.go
src/vizier/services/metadata/: metadata_server.go
src/vizier/services/query_broker/: query_broker_server.go
src/zerok/: BUILD.bazel  CMakeLists.txt  Makefile  main.cc  utils.h
src/zerok/common/: BUILD.bazel  ZkConfigProvider.h  ZkHttpConfig.h  ZkMySqlConfig.h  ZkPgSqlConfig.h  ZkRedisConfig.h  ZkServiceConfig.h  utils.h
src/zerok/filters/: BUILD.bazel  utils.h
src/zerok/filters/fetch/: AsyncTask.h
src/zerok/filters/query/: CompositeRule.h  ConditionType.h  FieldType.h  OperatorType.h  Query.h  QueryBuilder.h  QueryExecutor.h  QueryManager.h  QueryType.h  Rule.h  SimpleRule.h  SimpleRuleDefault.h  SimpleRuleInteger.h  SimpleRuleKeyValue.h  SimpleRuleString.h  ZkConfig.h  ZkTraceInfo.h
src/zerok/query/: OperatorType.h  Query.h  QueryBuilder.h  Rule.h  SimpleRuleDefault.h  SimpleRuleInteger.h  SimpleRuleKeyValue.h  SimpleRuleString.h
src/zerok/scripts/: build.sh  run.sh  variables.sh
src/zerok/socket/: BUILD.bazel  client.h  main.cpp  server.py  socket.h
src/zerok/socket/db/: memory.h
src/zerok/store/: BUILD.bazel  redis.h  store.h
src/zerok/store/redis/: RedisClient.cpp  RedisClient.h  hiredispool.c  hiredispool.h
