# Copyright 2018- The Pixie Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

load("//bazel:pl_build_system.bzl", "pl_cc_library", "pl_cc_test")
# load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
package(default_visibility = ["//src/stirling:__subpackages__"])

# http_archive(
#     name = "hiredis",
#     sha256 = "fe6d21741ec7f3fc9df409d921f47dfc73a4d8ff64f4ac6f1d95f951bf7f53d6",
#     url = "https://github.com/redis/hiredis/archive/refs/tags/v1.1.0.tar.gz",
#     strip_prefix = "hiredis-1.1.0",
# )

pl_cc_library(
    name = "cc_library",
    srcs = glob(
        ["**/*.cc"],
        exclude = [
            "**/*_test.cc",
            "**/main.cc",
        ],
    ),
    hdrs = glob(["**/*.h", "**/*.hpp"]),
    deps = [
        "@com_github_tencent_rapidjson//:rapidjson",
        # "@rapidjson//:rapidjson",
        "@com_github_redis_hiredis//:hiredis",
        # "@hiredis//:hiredis",
    ],
)

#################


# # load("//bazel:pl_build_system.bzl", "pl_cc_library", "pl_cc_test")
# load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
# load("@rules_cc//cc:defs.bzl", "cc_library")

# package(default_visibility = ["//src/stirling:__subpackages__"])

# # http_archive(
# #     name = "hiredis",
# #     sha256 = "fe6d21741ec7f3fc9df409d921f47dfc73a4d8ff64f4ac6f1d95f951bf7f53d6",
# #     url = "https://github.com/redis/hiredis/archive/refs/tags/v1.1.0.tar.gz",
# #     strip_prefix = "hiredis-1.1.0",
# # )

# cc_library(
#     name = "zerok_library",
#     srcs = glob(
#         ["**/*.cc"],
#         exclude = [
#             "**/*_test.cc",
#             "**/main.cc",
#         ],
#     ),
#     hdrs = glob(["**/*.h", "**/*.hpp"]),
#     deps = [
#         # "@com_github_tencent_rapidjson//:rapidjson",
#         # "@com_github_redis_hiredis//:hiredis",
#         "@hiredis//:hiredis",
#     ],
#     visibility = ["//visibility:public"],
# )